--- a/Week5_Grids/css/main.css
+++ b/Week5_Grids/css/main.css
@@ -67,7 +67,7 @@ a.side{
 	padding:1rem 0;
 	width: 70%;
 	margin-bottom: 1rem;
-	border-radius: 10px;
+/*	border-radius: 10px;*/
 	border-width: 1px;
 	float:right;
 
