--- a/Week5_Grids/css/grid.css
+++ b/Week5_Grids/css/grid.css
@@ -87,27 +87,41 @@
 	box-sizing:border-box;
 }
 
-/*@media(max-width: 1200px){
-	.col-4of5{
-		width:80%;
+@media(max-width: 1100px){
+	body{
+	margin: 0 2rem 0 2rem;
+	/*padding: 1rem 4rem 2rem 4rem;*/
 	}
+/*	img.menu{
+		width: 80%;
+	}
+	img#unselected.menu{
+		width: 80%;
+		height:80%;
+	}*/
 }
-@media(max-width: 700px){
+
+/*Tablet size*/
+@media(max-width: 900px){
+	body{
+		margin-left: 0;
+		margin-right: 0;
+	}
 	.col-1of3{
 		width:50%;
 	}
 	img{
-		width:70%;
+		width:100%;
+	}
+	img.menu{
+		width:80%;
 	}
 	p.cartProw,p.cartNrow{
 		width: 40%;
 		font-size:0.1rem;
 		margin-top: 0.2rem;
 	}
-	body{
-		margin-left: 0;
-		margin-right: 0;
-	}
+
 	#content{
 		padding-left: 0.5rem;
 		padding-right:0.5rem;
@@ -120,4 +134,3 @@
 
 
 
-*/
