--- a/Week5_Grids/css/main.css
+++ b/Week5_Grids/css/main.css
@@ -190,10 +190,19 @@ a.buynowBut,a.addtocart{
 	background-color:  #ee5260 ;
 	width:130px;
 	color: white;
+	margin: 1rem 0 0 0 ;
 }
 
-a.addtocart{
+a.detailviewaddtocart{
+	float:right;
 	display: inline-block;
+	text-decoration: none;
+	text-align: center;
+	padding: 0.5rem;
+	margin-top: 2rem;
+	background-color:  #ee5260 ;
+	width:130px;
+	color: white;
 	margin: 1rem 0 0 0 ;
 }
 
@@ -204,20 +213,36 @@ a.prodcomment{
 	font-size: 0.7rem;
 	color: #5b5744;
 }
+a.prodcommentdetailview{
+	display: inline-block;
+	float: right;
+	margin-right: 50%;
+	margin-top: 1rem;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 0.8rem;
+	color: #5b5744;
+	font-weight: normal;
+	text-decoration: underline;
+}
 
 a.prodcomment:hover{
 	font-weight: bold;
 }
 
-a.buynowBut:hover,a.addtocart:hover{
+a.prodcommentdetailview:hover{
+	font-weight: bold;
+}
+
+a.buynowBut:hover,a.addtocart:hover,a.detailviewaddtocart:hover{
 	color: black;
 }
 
-a.takeoutBut,a.dineinBut{
+a.takeoutBut,a.dineinBut,a.signin,a.register{
 	font-size: 1.2rem;
 }
 
-a.takeoutBut:hover, a.dineinBut:hover{
+
+a.takeoutBut:hover, a.dineinBut:hover,a.signin:hover,a.register:hover{
 	text-decoration: underline;
 }
 
@@ -237,6 +262,21 @@ h1.global{
 	margin-bottom: 0.5rem;
 	width: 100%;
 }
+h1.globalDetailview{
+	display: inline-block;
+	text-align: left;
+	margin-top: 0;
+	margin-bottom: 0.5rem;
+	width: 100%;
+}
+h1.globalDetailview2{
+	display: inline-block;
+	text-align: left;
+	margin-top: 2rem;
+	margin-bottom: 0.5rem;
+	width: 100%;
+}
+
 h1.cartpage{
 	text-align: center;
 	margin-top: 0;
@@ -268,6 +308,12 @@ h3.cart{
 	font-weight: 300;
 	color: #5b5744;
 }
+h3.detailview{
+	float: left;
+	display: inline-block;
+	margin: 0 1rem 0 0;
+}
+
 
 p{
 	font-family: 'Open Sans', sans-serif;
@@ -275,7 +321,7 @@ p{
 	color: #5b5744;
 }
 p.homepromo, p.aboutus,p.history,p.news,p.promotion,p.events,
-p.contact,p.cart,p.pi{
+p.contact,p.cart,p.pi,p.global{
 	text-align: left;
 }
 p.homepromo{
@@ -286,6 +332,24 @@ p.aboutus,p.history,p.news,p.promotion,p.events{
 	margin-bottom: 2rem;
 	margin-top: 0;
 	padding-right: 2rem;
+}
+
+p.detailview{
+	text-align: left;
+	margin:0;
+}
+
+p.detailviewDescription{
+	text-align: left;
+	margin-top:1rem;
+	margin-bottom: 0;
+	font-weight: bold;
+}
+p.othercomment{
+	display: inline-block;
+	text-align: left;
+	width: 100%;
+	margin-top:0;
 }
 
 p.cartNrow{
@@ -336,6 +400,11 @@ p.date{
 	margin-top: 0;
 	text-align: left;
 }
+p.quantity{
+	display: inline-block;
+	float: right;
+	margin-right: 1rem;
+}
 
 /*a.side{
 	margin-bottom: 2rem;
@@ -384,7 +453,11 @@ p.homeside:hover{
 }
 
 
-
+img.ratingdetailview{
+	float: right;
+	margin-right: 55%;
+	padding-top: 0.8rem;
+}
 img.homebottom{
 	margin-top: 0.5rem;
 	margin-bottom: 0; 
@@ -398,6 +471,18 @@ img.menu{
 	margin-bottom: 0;
 
 }
+.menu2{
+	height:135px;
+	width: 200px;
+	padding: 0.4rem;
+	background-color: #2dacbe;
+	margin-bottom: 0;
+
+}
+/*img.menu:hover{
+
+
+}*/
 img.cart{
 	margin-bottom: 0;
 	margin-right: 1rem;
@@ -425,6 +510,7 @@ img.cart{
 	float: left;
 	padding-left: 5rem;
 	margin-top: 2rem;
+	width: 100%;
 }
 
 
@@ -450,6 +536,23 @@ img.cart{
 	margin-top: 2rem;
 }
 
+#othercomments{
+	display: inline-block;
+	width: 100%;
+	margin-bottom: 2.5rem;
+}
+#selected{
+	height:135px;
+	width: 200px;
+	padding: 0.4rem;
+	background-color: #2dacbe;
+}
+#unselected{
+	height:150px;
+	width: 210px;
+	padding: 0;
+}
+
 .rowGlobal{
 	display: inline-block;
 	padding: 0 0.5rem;
@@ -468,6 +571,23 @@ form{
 label{
 	display: inline-block;
 	clear:left
+}
+
+input.login{
+	display: block;
+	width: 50%;
+	margin-bottom: 1rem;
+}
+select.detailview{
+	margin-top: 1rem;
+	float: right;
+	margin-right: 2.2rem;
+	width:10%;
+}
+
+textarea{
+	width: 100%;
+	height:100px;
 }
 
 
