--- a/Week5_Grids/css/imagehover.css
+++ b/Week5_Grids/css/imagehover.css
@@ -19,13 +19,14 @@
    -o-transition: all 0.4s ease-in-out;
    -ms-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
-   width: 170px;
+   margin-left: 0.6rem;
+   width: 150px;
    height: 35px;
-   -webkit-transform: translateY(135px);
-   -moz-transform: translateY(135px);
-   -o-transform: translateY(135px);
-   -ms-transform: translateY(135px);
-   transform: translateY(135px);
+   -webkit-transform: translateY(70px);
+   -moz-transform: translateY(70px);
+   -o-transform: translateY(70px);
+   -ms-transform: translateY(70px);
+   transform: translateY(70px);
 }
 /*.view-first h2 {
    -webkit-transform: translateY(-100px);
@@ -126,4 +127,6 @@ a.info{
 a.info:hover{
    color: black;
 }
+
+
 				
