--- a/Week5_Grids/css/imagehover2.css
+++ b/Week5_Grids/css/imagehover2.css
@@ -19,14 +19,14 @@
    -o-transition: all 0.4s ease-in-out;
    -ms-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
-
-   width: 210px;
+   margin-left: 1.8rem;
+   width: 150px;
    height: 35px;
-   -webkit-transform: translateY(115px);
-   -moz-transform: translateY(115px);
-   -o-transform: translateY(115px);
-   -ms-transform: translateY(115px);
-   transform: translateY(115px);
+   -webkit-transform: translateY(60px);
+   -moz-transform: translateY(60px);
+   -o-transform: translateY(60px);
+   -ms-transform: translateY(60px);
+   transform: translateY(60px);
 }
 /*.view-first h2 {
    -webkit-transform: translateY(-100px);
@@ -126,5 +126,12 @@ a.info{
 }
 a.info:hover{
    color: black;
+}
+
+
+@media(max-width: 400px){
+   .view-first .mask{
+      margin-left: 0.8rem;
+   }
 }
             
