--- a/Week5_Grids/css/imagehover.css
+++ b/Week5_Grids/css/imagehover.css
@@ -128,5 +128,17 @@ a.info:hover{
    color: black;
 }
 
+@media(max-width: 1100px){
+   .view-first a.info{
+      -webkit-transform: translateY(-135px);
+      -moz-transform: translateY(-135px);
+      -o-transform: translateY(-135px);
+      -ms-transform: translateY(-135px);
+      transform: translateY(-135px);
+   }
+   .view-first .mask{
+      margin-left: 0.5rem;
+   }
+}
 
 				
