--- a/Week5_Grids/css/main.css
+++ b/Week5_Grids/css/main.css
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
 body{
-	margin: 0 6rem 0 6rem;
+	margin: 0 6.7% 0 6.7%;
 	/*padding: 1rem 4rem 2rem 4rem;*/
 }
 
